# kalman_c

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  kalman.c  kalman.h  main.c  matrix_math.c  matrix_math.h
.github/workflows/: cmake-multi-platform.yml
demos/: kalman_demo.c
tests/: CMakeLists.txt  test_ekf.c  test_kalman.c  test_matrix.c
